--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "date-range-picker",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@wojtekmaj/react-daterange-picker": "^2.4.0",
     "axios": "^0.19.0",
@@ -29,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0"
   }
 }
