--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "date-range-picker",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "http://muraliprashanth.me/vat_global/",
   "dependencies": {
     "@wojtekmaj/react-daterange-picker": "^2.4.0",
     "axios": "^0.19.0",
